# Report-Helper

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  run.py  setup.py  tox.ini
.github/workflows/: ci.yml
.vercel/: project.json
docs/: README.md  doc.md  社畜文化风格.md  飞书权限配置指南.md  飞书自动提交功能说明.md
scripts/: setup.bat  start.bat
src/: __init__.py  ai_generator.py  config_manager.py  feishu_client.py  feishu_scheduler.py  main.py  quick_add_button.py  report_generator.py  report_window.py  settings_window.py  system_tray.py  timer_manager.py  work_log_window.py
tests/: __init__.py  test_config_manager.py
